<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/background_light"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_tv_left_round"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/title_posts"
        android:textColor="@drawable/selector_tv_text_color" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_tv_rectangle"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/title_map"
        android:textColor="@drawable/selector_tv_text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_tv_right_round"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/title_network"
        android:textColor="@drawable/selector_tv_text_color" />


</LinearLayout>