<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_wrap"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    android:weightSum="8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:src="@drawable/discover_icon" />

        <TextView
            android:id="@+id/tv_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/discover"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:src="@drawable/map" />

        <TextView
            android:id="@+id/tv_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/map"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:src="@drawable/my_post" />

        <TextView
            android:id="@+id/tv_myPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_post"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:src="@drawable/discover_icon" />

        <TextView
            android:id="@+id/tv_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/request"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:src="@drawable/my_network" />

        <TextView
            android:id="@+id/tv_myNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_network"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>