<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/background_light"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_request_tv_name"
                    style="@style/TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:text="John" />


                <android.support.v7.widget.AppCompatRatingBar
                    android:id="@+id/item_request_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_left_very_small"
                    android:isIndicator="true"
                    android:numStars="6"
                    android:stepSize="0.5" />

            </LinearLayout>


            <TextView
                android:id="@+id/item_request_tv_address"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:drawableStart="@drawable/location_icon_small"
                android:maxHeight="@dimen/text_view_max_height"
                android:maxWidth="168dp"
                android:text="@string/dummy_data_address" />

            <TextView
                android:id="@+id/item_request_tv_show_on"
                style="@style/RoundedLeftTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_toEndOf="@+id/item_request_tv_address"
                android:padding="@dimen/padding_small"
                android:text="@string/show_on_map"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/item_request_tv_duration"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_request_tv_address"
                android:drawableStart="@drawable/time_1"
                android:maxHeight="@dimen/text_view_max_height"
                android:maxWidth="168dp"
                android:text="@string/dummy_data_duration" />

            <TextView
                android:id="@+id/item_request_tv_review"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_request_tv_duration"
                android:layout_marginBottom="@dimen/margin_top_large"
                android:layout_marginLeft="@dimen/margin_left_large"
                android:layout_marginRight="@dimen/margin_left_large"
                android:drawableStart="@drawable/reviewa_icon_small"
                android:maxHeight="@dimen/text_view_max_height"
                android:text="@string/dummy_data_text" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_request_iv"
        android:layout_width="@dimen/circular_image_side"
        android:layout_height="@dimen/circular_image_side"
        android:layout_centerHorizontal="true"
        android:elevation="@dimen/elevation"
        android:src="@drawable/placeholder_user"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="@dimen/circular_image_border_width" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-26dp"
        android:elevation="@dimen/elevation">

        <ImageButton
            android:id="@+id/item_request_tv_accept"
            style="@style/RoundedTextViewPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_button_background"
            android:src="@drawable/accept" />

        <ImageButton
            android:id="@+id/item_request_tv_reject"
            style="@style/RoundedTextViewSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/shape_button_background"
            android:src="@drawable/reject" />

    </LinearLayout>


</RelativeLayout>